# urugway

./: .clang-format  .gitignore  CMakeLists.txt
src/: keywords.c  keywords.h  parser.c  parser.h  token.c  token.h  utils.h
src/parsing/: parser.c  parser.h  parser.hpp  strategy.c  strategy.h  token.c  token.h
src/parsing/dictionary/: keywords.c  keywords.h  operators.c  operators.h  symbols.c  symbols.h
